fix: version update